--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "fetch.macro",
   "description": "write fetch function with babel.macros",
   "author": "r17x <hi@rin.rocks>",
+  "homepage": "https://github.com/r17x/fetch.macro",
+  "repository": "https://github.com/r17x/fetch.macro",
   "version": "0.0.0",
   "keywords": [
     "babel-plugin-macros",
@@ -31,7 +33,7 @@
     "*": "prettier --ignore-unknown --write",
     "*.js": [
       "eslint --fix",
-      "cross-env NODE_ENV=test jest --bail --findRelatedTests"
+      "cross-env NODE_ENV=test jest --bail --findRelatedTests --passWithNoTests"
     ]
   },
   "jest": {
@@ -48,6 +50,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7",
+    "@commitlint/cli": "16.2.1",
+    "@commitlint/config-conventional": "16.2.1",
+    "@commitlint/prompt": "16.2.1",
+    "@semantic-release/changelog": "semantic-release/changelog",
+    "@semantic-release/git": "10.0.1",
+    "@semrel-extra/npm": "1.2.0",
+    "commitlint-config-squash-pr": "1.1.0",
     "babel-plugin-macros": "^3",
     "babel-plugin-tester": "^10",
     "cross-env": "^7",
@@ -56,6 +65,7 @@
     "prettier": "^2",
     "husky": "^8",
     "jest": "^29",
-    "lint-staged": "^13"
+    "lint-staged": "^13",
+    "semantic-release": "19.0.2"
   }
 }
