--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,22 +8,43 @@ on:
     branches:
       - main
 jobs:
-  release:
+  init:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Use Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16.x
-          cache: yarn
-      - run: yarn --frozen-lockfile --no-progress --non-interactive --prefer-offline
-      - name: Check commit message
-        uses: wagoid/commitlint-github-action@v4
+      - uses: ./.github/actions/setup-node
+      - uses: wagoid/commitlint-github-action@v4
         env:
           NODE_PATH: ${{ github.workspace }}/node_modules
+
+  validate:
+    needs: init
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/setup-node
+
+      - name: validate (lint)
+        run: yarn lint
+  test:
+    needs: init
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/setup-node
+
+      - name: run test
+        run: yarn test
+
+  release:
+    needs:
+      - validate
+      - test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/setup-node
+
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v2
         with:
