docs: linked badge in README

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "prepare": "husky install",
     "lint": "eslint",
+    "format": "prettier --write --ignore-unknown",
     "test": "jest"
   },
   "prettier": {
