--- a/.github/actions/setup-node/action.yml
+++ b/.github/actions/setup-node/action.yml
@@ -16,9 +16,9 @@ runs:
       with:
         fetch-depth: 0
 
-    # - name: Setup git user to "kdnjbot"
-    #   shell: bash
-    #   run: git config user.email "robot@koding.ninja" && git config user.name "kdnjbot"
+    - name: Setup git user to "anakmagang"
+      shell: bash
+      run: git config user.email "anakmagang@evilfactorylabs.org" && git config user.name "anakmagang"
 
     - name: Use Node.js
       uses: actions/setup-node@v2
