chore(deps): only used files in distribution at registry

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "fetch"
   ],
   "main": "src/fetch.macro.js",
+  "files": [
+    "src/fetch.macro.js"
+  ],
   "license": "MIT",
   "scripts": {
     "prepare": "husky install",
