--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,12 +32,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
+        with:
+          rust_cache_enable: true
 
       - name: run test
         run: yarn test --collectCoverage
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
 
       - name: test run generator API markdown
         run: .husky/generate-api-md
@@ -51,6 +50,9 @@ jobs:
       - name: run test swc
         run: yarn swc:test
 
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+
   build:
     needs:
       - validate
@@ -59,6 +61,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/setup-node
+        with:
+          rust_cache_enable: true
+
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
