ci(actions): make release depends with build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,8 +75,7 @@ jobs:
 
   release:
     needs:
-      - validate
-      - test
+      - build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
