ci(actions): upgrade to v3
* actions/checkout
* actions/node
* actions/semanti-release

--- a/.github/actions/setup-node/action.yml
+++ b/.github/actions/setup-node/action.yml
@@ -12,16 +12,18 @@ runs:
   using: composite
   steps:
     - name: Checkout all commits
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         fetch-depth: 0
 
     - name: Setup git user to "anakmagang"
       shell: bash
-      run: git config user.email "anakmagang@evilfactorylabs.org" && git config user.name "anakmagang"
+      run: |
+        git config user.email "anakmagang@evilfactorylabs.org"
+        git config user.name "anakmagang"
 
     - name: Use Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3
       with:
         cache: yarn
         node-version: ${{ inputs.node_version }}
