chore: integrated with @swc/jest

--- a/package.json
+++ b/package.json
@@ -48,6 +48,11 @@
     "testMatch": [
       "**/tests/**/*.[jt]s?(x)"
     ],
+    "transform": {
+      "^.+\\.(t|j)sx?$": [
+        "@swc/jest"
+      ]
+    },
     "testPathIgnorePatterns": [
       "/node_modules/",
       "tests/create-tests.js",
