--- a/package.json
+++ b/package.json
@@ -22,10 +22,9 @@
   ],
   "license": "MIT",
   "scripts": {
-    "prepare": "husky install",
     "lint": "eslint",
     "format": "prettier --write --ignore-unknown",
-    "build": "cargo build --manifest-path ./swc/Cargo.toml --release --target=wasm32-wasi",
+    "build": "cargo build --manifest-path ./swc/cargo.toml --release --target=wasm32-wasi",
     "swc:test": "cargo test --manifest-path ./swc/Cargo.toml",
     "test": "jest && yarn swc:test"
   },
