chore: bump yarn version to v4

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -41,7 +41,7 @@ runs:
 
     - name: yarn install
       shell: bash
-      run: yarn --frozen-lockfile --no-progress --non-interactive --prefer-offline
+      run: yarn --frozen-lockfile --no-progress --non-interactive --prefer-offline || yarn install --check-cache
 
     - uses: actions/cache@v3
       id: "rust_cache_hits"
