--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@commitlint/cli": "16.2.1",
     "@commitlint/config-conventional": "16.2.1",
     "@commitlint/prompt": "16.2.1",
+    "@kodingdotninja/style-guide": "^4",
     "@semantic-release/changelog": "semantic-release/changelog",
     "@semantic-release/git": "10.0.1",
     "@semrel-extra/npm": "1.2.0",
@@ -66,7 +67,6 @@
     "commitlint-config-squash-pr": "1.1.0",
     "cross-env": "^7",
     "eslint": "^8",
-    "@kodingdotninja/style-guide": "^4",
     "husky": "^8",
     "jest": "^29",
     "lint-staged": "^13",
@@ -78,5 +78,6 @@
     "semantic-release": "19.0.2",
     "turbo": "^1.6.3",
     "unist-builder": "^3"
-  }
+  },
+  "packageManager": "yarn@4.1.0"
 }
